--- a/UI/style/style.css
+++ b/UI/style/style.css
@@ -7,5 +7,9 @@
 body {
   font-family: Arial, sans-serif;
   background-color: #f4f4f4;
-  padding-top: 80px;
+  padding-top: 70px;
+}
+
+body.menu-open {
+  overflow: hidden;
 }
