--- a/UI/style/question.css
+++ b/UI/style/question.css
@@ -44,6 +44,15 @@
   color: #fff;
 }
 
+.no-hover {
+  pointer-events: none;
+  opacity: 0.5;
+}
+
+.no-hover:hover {
+  cursor: default;
+}
+
 .feedback {
   margin-top: 20px;
   font-weight: bold;
